docs/requirements/v2.2.1/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want to use Cognito Single Sign On to authenticate to the DUM service ([#10](https://github.com/NASA-PDS/data-upload-manager/issues/10)) 


This requirement is not impacted by the current version
## Develop Ingress Client Logging Capabilities ([#21](https://github.com/NASA-PDS/data-upload-manager/issues/21)) 


This requirement is not impacted by the current version
## As a user, I want to parallelize upload of data products to PDC ([#24](https://github.com/NASA-PDS/data-upload-manager/issues/24)) 


This requirement is not impacted by the current version
## As Nucleus, I want to use a lock file to know when DUM is writing to a S3 bucket folder ([#28](https://github.com/NASA-PDS/data-upload-manager/issues/28)) 


This requirement is not impacted by the current version
## As a user, I want to upload only data products that have not been previously ingested ([#33](https://github.com/NASA-PDS/data-upload-manager/issues/33)) 


This requirement is not impacted by the current version
## As a user, I want to resume/rerun upload on a directory and only have the updates or missing files uploaded ([#34](https://github.com/NASA-PDS/data-upload-manager/issues/34)) 


This requirement is not impacted by the current version
## Add argument to client script to follow symlinks ([#44](https://github.com/NASA-PDS/data-upload-manager/issues/44)) 


This requirement is not impacted by the current version
## As a user, I want to include a MD5 checksum in the the user-defined object metadata being sent in the upload payload ([#50](https://github.com/NASA-PDS/data-upload-manager/issues/50)) 


This requirement is not impacted by the current version
## As a user, I want to be able to take no more than X seconds per product to upload to AWS ([#83](https://github.com/NASA-PDS/data-upload-manager/issues/83)) 


This requirement is not impacted by the current version
## As a user, I want to include the modification datetime in the the user-defined object metadata being sent in the upload payload ([#87](https://github.com/NASA-PDS/data-upload-manager/issues/87)) 


This requirement is not impacted by the current version
## As a user, I want to skip upload of files already in S3 (nucleus staging bucket) ([#92](https://github.com/NASA-PDS/data-upload-manager/issues/92)) 


This requirement is not impacted by the current version
## As a user, I want an end summary report in logs to show statistics of files uploaded ([#98](https://github.com/NASA-PDS/data-upload-manager/issues/98)) 


This requirement is not impacted by the current version
## As a user, I want to skip upload of files that are already in the Registry ([#99](https://github.com/NASA-PDS/data-upload-manager/issues/99)) 


This requirement is not impacted by the current version
## As a user, I want to force an upload of file that is already in S3 or the Registry ([#100](https://github.com/NASA-PDS/data-upload-manager/issues/100)) 


This requirement is not impacted by the current version
## As an admin, I want access to buckets to be restricted by subnet ([#102](https://github.com/NASA-PDS/data-upload-manager/issues/102)) 


This requirement is not impacted by the current version
## As a user, I want timestamps to the ongoing logs that are printed to stdout while running the job ([#118](https://github.com/NASA-PDS/data-upload-manager/issues/118)) 


This requirement is not impacted by the current version
## As a user, I want status summary reports during a long running execution (batching functionality) ([#119](https://github.com/NASA-PDS/data-upload-manager/issues/119)) 


This requirement is not impacted by the current version
## As a user, I want to monitor the progress of Data Upload Manager in a visual dashboard in AWS ([#129](https://github.com/NASA-PDS/data-upload-manager/issues/129)) 


This requirement is not impacted by the current version
## As a user, I want to upload files to S3 Glacier directly via DUM ([#205](https://github.com/NASA-PDS/data-upload-manager/issues/205)) 


This requirement is not impacted by the current version
## As a user, I can read rclone-generated checksums when checking for existing files in the staging bucket ([#209](https://github.com/NASA-PDS/data-upload-manager/issues/209)) 


This requirement is not impacted by the current version
## As a user, I want to support upload of files >5GB ([#221](https://github.com/NASA-PDS/data-upload-manager/issues/221)) 


This requirement is not impacted by the current version
## As a user, I want to load web logs to the web analytics bucket ([#232](https://github.com/NASA-PDS/data-upload-manager/issues/232)) 


This requirement is not impacted by the current version
## As a user, I want to verify data has been uploaded to S3 through the AWS Console ([#258](https://github.com/NASA-PDS/data-upload-manager/issues/258)) 


This requirement is not impacted by the current version
## As a user, I want to specify in include/exclude filters for the set of input file paths ([#262](https://github.com/NASA-PDS/data-upload-manager/issues/262)) 


This requirement is not impacted by the current version
# data-integrity

## As a user, I want to verify all my data has been uploaded to the cloud successfully ([#121](https://github.com/NASA-PDS/data-upload-manager/issues/121)) 


This requirement is not impacted by the current version
## As a user, I want to provide a checksum manifest as input to verify the checksums being generated by data upload manager ([#122](https://github.com/NASA-PDS/data-upload-manager/issues/122)) 


This requirement is not impacted by the current version